Fix shift for empty stacks

--- a/src/app/components/stack/stack.scss
+++ b/src/app/components/stack/stack.scss
@@ -39,4 +39,8 @@
   background: $noCardBG;
 
   border-radius: $card-radius;
+
+  &.no-spread {
+    margin-left: 10px;
+  }
 }
